--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
 
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form.as_p }}  <!-- Renderowanie formularza w formie akapitów -->
         <button type="submit">Zarejestruj się</button>
     </form>
 
