--- a/templates/create_parcel.html
+++ b/templates/create_parcel.html
@@ -3,14 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Parcel</title>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            // Inicjalizowanie Select2 dla dropdownów
+            $('#sent_from_locker').select2({
+                placeholder: 'Select Locker to Send From',
+                allowClear: true
+            });
+
+            $('#sent_to_locker').select2({
+                placeholder: 'Select Locker to Send To',
+                allowClear: true
+            });
+        });
+    </script>
 </head>
 <body>
     <h1>Create a Parcel</h1>
+
+    <!-- Formularz tworzenia paczki -->
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+
+        <!-- Wybór lockerów za pomocą Select2 -->
+        <div>
+            <label for="sent_from_locker">Sent From Locker:</label>
+            <select name="sent_from_locker" id="sent_from_locker">
+                {% for locker in lockers %}
+                    <option value="{{ locker.id }}">{{ locker.name }} ({{ locker.location }})</option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <div>
+            <label for="sent_to_locker">Sent To Locker:</label>
+            <select name="sent_to_locker" id="sent_to_locker">
+                {% for locker in lockers %}
+                    <option value="{{ locker.id }}">{{ locker.name }} ({{ locker.location }})</option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <br>
+
+        <!-- Pozostałe pola formularza -->
+        <div>
+            <label for="{{ form.name.id_for_label }}">Package Name:</label>
+            {{ form.name }}
+        </div>
+
+        <div>
+            <label for="{{ form.package_size.id_for_label }}">Package Size:</label>
+            {{ form.package_size }}
+        </div>
+
+        <div>
+            <label for="{{ form.receiver_email.id_for_label }}">Receiver Email:</label>
+            {{ form.receiver_email }}
+        </div>
+
+        <br>
+
         <button type="submit">Create Parcel</button>
     </form>
+
     {% if messages %}
         <ul>
             {% for message in messages %}
@@ -18,6 +77,7 @@
             {% endfor %}
         </ul>
     {% endif %}
+
     <a href="{% url 'main_page' %}">Back to Main Page</a>
 </body>
 </html>
