DOdanie widoku kuriera, logownaie kuriera i poprawki do validacji emaila przy dodawaniu paczki

--- a/templates/create_parcel.html
+++ b/templates/create_parcel.html
@@ -7,8 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
     <script>
-        $(document).ready(function() {
-            // Inicjalizowanie Select2 dla dropdownów
+        $(document).ready(function() 
             $('#sent_from_locker').select2({
                 placeholder: 'Select Locker to Send From',
                 allowClear: true
